clusters/traefik/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: "auth-ak-outpost-authentik-embedded-outpost@kubernetescrd"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: traefik.homelab.haseebmajid.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
  tls:
    - hosts:
        - traefik.homelab.haseebmajid.dev
      secretName: traefik-haseebmajid-dev-tls
